--- a/css/screen.css
+++ b/css/screen.css
@@ -185,6 +185,31 @@ a:focus {
 /*------------------------------------*\
   #OBJECTS
 \*------------------------------------*/
+.o-list {
+    list-style: none;
+    padding: none;
+}
+
+.o-section {
+}
+
+.o-section + .o-section {
+    margin-top: 24px;
+}
+
+@media (min-width: 768px) {
+    .o-section--lg + .o-section--lg,
+    .o-section--xl + .o-section--xl {
+        margin-top: 48px;
+    }
+}
+
+@media (min-width: 1200px) {
+    .o-section--xl + .o-section--xl {
+        margin-top: 72px;
+    }
+}
+
 
 /*
     Objects: Row
@@ -226,7 +251,9 @@ a:focus {
     margin-left: auto;
     margin-right: auto;
     width: 100%;
-    max-width: 70.5em; /* 90 * 16px = 1440px */
+    max-width: 56,4em; /* 90 * 16px = 1440px */
+    
+    
 }
 
 /*
@@ -358,13 +385,99 @@ a:focus {
 height:100%;
 }
 
+.c-logo1 {
+    height: 32px;
+}
+
+.c-logo__symbol1 {
+
+height:100%;
+}
+
 @media (min-width: 768px) {
-    .c-logo__symbol {
+    .c-logo__symbol,.c-logo__symbol1 {
+        height:100%;
     }
-    .c-logo {
+    .c-logo,.c-logo1 {
         height: 40px;
     }
 }
+.c-nav {
+    font-size: 18px;
+    line-height: 24px;
+}
+
+.c-nav__link {
+    text-decoration: none;
+    font-weight: 400;
+    padding: 8px 0;
+    display: block;
+}
+
+.c-nav__link,
+.c-nav__link:visited,
+.c-nav__link:active {
+    color: #202024
+}
+
+.c-nav__link:hover,
+.c-nav__link:focus {
+    color: 5051db;
+}
+.c-nav--meta {
+    font-size: 16px;
+}
+.c-nav__link--meta,
+    .c-nav__link--meta:visited,
+    .c-nav__link--meta:active {
+        color:#6c6c75;
+    }
+
+.c-nav__link:hover,
+.c-nav__link:focus {
+    color:#5051db;
+}    
+.is-selected .c-nav__link,
+.c-nav__link:hover,
+.c-nav__link:focus {
+    color: #5051db;
+}
+
+
+@media (min-width: 768px) {
+    .c-nav__list {
+        display:flex;
+    }
+
+    .c-nav__link {
+        padding: 8px 16px;
+    }
+
+    
+
+    
+}
+
+
+.c-header__nav {
+    display: none;
+}
+
+@media (min-width: 992px) {
+    .c-header {
+        display:flex;
+        justify-content:space-between;
+        
+        
+
+    }
+
+    .c-header__nav {
+        display: block;
+
+       
+}
+
 
 
 /*------------------------------------*\
@@ -376,6 +489,7 @@ height:100%;
     ---
     Utility classes to put specific max widths onto elements
 */
+
 
 .u-max-width-xs {
     max-width: 18em !important;
@@ -407,6 +521,10 @@ height:100%;
     Utility classes to put specific flex properties onto elements
     Will be mostly used on o-layout__item
 */
+
+.u-pt-clear {
+    padding-top: 0 !important;
+}
 
 .u-flex-basis-auto {
     flex-basis: auto !important;
@@ -534,7 +652,7 @@ height:100%;
 
 @media (min-width: 992px) {
     .u-1-of-2-bp3 {
-        flex-basis: calc(100% / 2) !important;
+        flex-basis: calc(100% / 2)  !important;
     }
     .u-1-of-3-bp3 {
         flex-basis: calc(100% / 3) !important;
@@ -624,9 +742,22 @@ height:100%;
 @media (min-width: 576px) {}
 */
 
-/* Medium devices (tablets, 768px and up)
-@media (min-width: 768px) {}
-*/
+/* Medium devices (tablets, 768px and up)*/
+@media (min-width: 768px) {
+    .o-row {
+        padding-left: 48px;
+        padding-right: 48px;
+    }
+    .o-row--md {
+        padding-top: 48px;
+        padding-bottom: 24px;
+    }
+    .o-row--lg {
+        padding-top: 72px;
+        padding-bottom: 48px;
+    }
+}
+
 
 /* Large devices (landscape tablets, desktops, 992px and up)
 @media (min-width: 992px) {}
