--- a/css/screen.css
+++ b/css/screen.css
@@ -632,6 +632,44 @@ height:100%;
 
 
 
+.c-footer {
+    display:flex;
+    justify-content:space-between;
+}
+
+.c-footer__logo {
+
+}
+
+.c-footer__nav {
+    display: block;
+}
+
+
+@media (min-width: 768px) {
+    .c-footer {
+    }
+
+    .c-footer__logo {
+    }
+
+    .c-footer__nav {
+    }
+}
+
+@media (min-width: 992px) {
+    .c-footer {
+    }
+
+    .c-footer__logo {
+    }
+
+    .c-footer__logo .c-logo {
+    }
+
+    .c-footer__nav {
+    }
+}
 
 
 /*------------------------------------*\
